# ryanarnouk.github.io

./: .gitignore  README.md  clear_cache.sh  config.yml  package-lock.json  package.json
.github/workflows/: build-deploy.yml
content/home/: home.md
content/index/: index.md
content/page/: 1contact.md  2experience.md  3university.md  404.md  about.md  university.md
content/post/: 20181217-blockly-react.md  20190125-react-aws.md  20250506-personal-website.md  example.md
ssg/: Cargo.toml
ssg/src/: cache.rs  main.rs  parser.rs  path.rs  resources.rs
templates/: home.html  index.html  page.html  post.html  tailwind.config.js  tailwind.css
templates/partials/: footer.html  header.html  image.html
